Modified image edit to fix wide image overlap bug on windows and mozilla

--- a/ui/themes/default/e-gecko.css
+++ b/ui/themes/default/e-gecko.css
@@ -54,6 +54,12 @@ table.list {
 	border-radius: 7px;
 	box-shadow: #777 1px 1px 3px;
 }
+table.imageform td img {
+	box-shadow: #777 1px 1px 3px;
+}
+table.imageform td.input div.image_preview img {
+	max-width: 32em;
+}
 
 table.list tr.textfield > td > input:-moz-placeholder {
 	color: #ccc;
